# s3-rust-data-portal

./: .gitignore  .zshrc.automation  404.html  CHANGELOG.md  Cargo.toml  DEPLOY_K8S.md  Dockerfile  Dockerfile.api  Dockerfile.cli  Dockerfile.gateway  Dockerfile.jobrunner  Dockerfile.migrations  Dockerfile.mlflow  Dockerfile.ui  FAST_SETUP.md  FINALIZATION_SUMMARY.md  MULTITENANCY.md  PROJECT_COMPLETION_SUMMARY.md  PR_PLAN_FINAL.md  README.md  SDKS.md  SECURITY.md  SETUP_SUMMARY.md  TODO.md  VERIFICATION_SUMMARY.md  WEEK7_SUMMARY.md  build-images.sh  build-optimized.sh  data-model.mmd  deployment.mmd  docker-bake-simple.hcl  docker-bake.hcl  docker-compose.migrations.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  docs-serve.sh  env.example  env.production.example  (+34 more)
.github/workflows/: backup-validation.yml  build.yml  ci.yml  compose-e2e.yml  docs.yml  performance.yml  security.yml
ACTIVE_STANDBY_GUIDE/: index.html
CHANGELOG/: index.html
DEPLOYMENT/: index.html
FAST_SETUP/: index.html
IMAGES/: index.html
IMPLEMENTATION_SUMMARY/: index.html
MIGRATION_SETUP/: index.html
OPERATIONS/: index.html
PROJECT_STATUS/: index.html
QUICK_START/: index.html
SEARCH/: index.html
SESSIONS/: index.html
TODO/: index.html
VERIFICATION/: index.html
architecture/: index.html
cli/: index.html
contracts/: README.md
crates/api/: Cargo.toml
crates/api/src/: access_review.rs  admin_access.rs  analytics.rs  api_key_auth.rs  auth.rs  budget_alerts.rs  compliance.rs  connectors.rs  cost_tracking.rs  csrf_protection.rs  error.rs  export_tests.rs  exports.rs  governance.rs  health.rs  jobrunner.rs  jobs.rs  main.rs  monitoring.rs  openapi.rs  performance_reporting.rs  performance_tests.rs  policy_enforcement.rs  rate_limit.rs  request_signing.rs  search_api.rs  security_headers.rs  semantic_search.rs  sessions.rs  signed_url_constraints.rs  solr_search.rs  ui_deltas.rs  webhooks.rs  workers.rs
crates/api/tests/: integration_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: api.rs  main.rs  prompt.rs
crates/cli/src/cmd/: init.rs  meta.rs  put.rs
crates/cli/tests/: init.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: ckan.rs  lib.rs  manager.rs  postgres.rs  s3.rs  traits.rs
crates/core/: Cargo.toml
crates/core/src/: compliance.rs  compliance_jobs.rs  compliance_jobs_tests.rs  compliance_worker.rs  embeddings.rs  governance.rs  governance_tests.rs  jobs.rs  jobs_tests.rs  lib.rs  merge.rs  observability.rs  policy.rs  policy_tests.rs  schema.rs  search.rs  search_tests.rs  sessions.rs  sessions_tests.rs  validation.rs
crates/index/: Cargo.toml
crates/index/src/: cache.rs  health.rs  health_tests.rs  lib.rs  lineage.rs  resilience.rs
crates/modelx/: Cargo.toml
crates/modelx/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  resilience.rs
deploy/helm/blacklake/: Chart.yaml  values.yaml
docs/: ACTIVE_STANDBY_GUIDE.md  CHANGELOG.md  DEPLOYMENT.md  FAST_SETUP.md  IMAGES.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SETUP.md  OPERATIONS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SEARCH.md  SESSIONS.md  TODO.md  VERIFICATION.md  architecture.md  architecture.mmd  cli.md  documentation.md  getting-started.md  index.md  local_testing.md  policy-eval.mmd  repository-overview.md  retention.mmd  sequence-upload.mmd
docs/grafana/dashboards/: api-performance.json  storage-metrics.json
docs/ops/runbooks/: backup-restore.md  disaster-recovery.md  performance-troubleshooting.md  security-incident.md
docs/prometheus/alerts/: performance.yml
documentation/: index.html
examples/: cli-init-example.md  complete-workflow-example.md  test-init.sh
getting-started/: index.html
grafana/dashboards/: database-metrics.json  system-overview.json  week8-metrics.json
helm/blacklake/: Chart.yaml  values.yaml
k8s/: api-deployment.yaml  configmap.yaml  hpa.yaml  namespace.yaml
kustomize/overlays/dev/: deployment-patch.yaml  kustomization.yaml
kustomize/overlays/prod/: deployment-patch.yaml  hpa-patch.yaml  kustomization.yaml  pdb-patch.yaml
local_testing/: index.html
migrations/: 0001_init.sql  0002_metadata_index_and_rdf.sql  0003_governance_features.sql  0003_lineage_and_quotas.sql  0004_multitenant_abac.sql  0005_data_classification.sql  0006_external_sources.sql  0007_compliance_features.sql  0008_compliance_jobs.sql  0009_fix_missing_columns.sql  0010_api_missing_tables.sql
ops/grafana/dashboards/: api-performance.json  blacklake-overview.json
ops/k6/: edge-cases.js  k6.conf.js  load-test.js  load-tests.js  stress-test.js
ops/minio/: retention.json
ops/mlflow/: mlflow.conf
ops/nginx/: Dockerfile  nginx.conf
ops/nginx/conf.d/: blacklake.conf
ops/otel/: Dockerfile  otel-collector-config.yaml
ops/pgbackrest/: pgbackrest.conf
ops/postgres/: postgresql.conf
ops/prometheus/: prometheus.yml
ops/prometheus/rules/: blacklake.yml
ops/runbooks/: backup-restore.md  disaster-recovery.md  incident-response.md
ops/runbooks/backup-restore/: index.html
ops/runbooks/disaster-recovery/: index.html
ops/runbooks/performance-troubleshooting/: index.html
ops/runbooks/security-incident/: index.html
ops/scripts/: backup.sh  restore.sh
ops/solr/: init-cloud.sh  solrconfig.xml  stopwords.txt  synonyms.txt
prometheus/alerts/: critical.yml  warning.yml
scripts/: backup-validation.sh  chaos-probes.sh  cli.sh  run-migrations.sh
sdks/python/: pyproject.toml
sdks/python/blacklake/: __init__.py  client.py  exceptions.py  models.py
sdks/typescript/: package.json  tsup.config.ts
sdks/typescript/src/: client.ts  exceptions.ts  index.ts  types.ts
search/: search_index.json
tests/: governance_integration_tests.rs  metadata_integration_test.rs
ui/: Dockerfile  README.md  env.example  index.html  nginx.conf  package.json  pnpm-lock.yaml
ui/public/: manifest.json  offline.html  silent-callback.html  sw.js
ui/src/: App.tsx
ui/src/app/: query.ts  routes.tsx  store.ts  theme.css
ui/src/components/: ContextualHelp.tsx  HelpIcon.tsx
(+99 files in other folders)
