[workspace]
members = [
    "crates/api",
    "crates/core", 
    "crates/index",
    "crates/storage",
    "crates/modelx",
    "crates/cli",
    "crates/connectors"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono", "macros"] }

# AWS S3
aws-config = "1.1"
aws-sdk-s3 = "1.0"

# Authentication
jsonwebtoken = "9.2"
openidconnect = "3.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# JSON Schema
schemars = { version = "0.8", features = ["chrono"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Base64 encoding
base64 = "0.21"

# URL handling
url = "2.4"

# RDF support
sophia = { version = "0.8", features = ["all"] }
regex = "1"

# Job system
apalis = { version = "0.6", features = ["redis", "tokio"] }
apalis-redis = "0.6"
apalis-core = "0.6"

# Sessions
tower-sessions = "0.7"
tower-sessions-redis-store = "0.7"

# Cryptography
rand = "0.8"
hmac = "0.12"
