[package]
name = "blacklake-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "jobrunner"
path = "src/jobrunner.rs"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
openidconnect = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

# Internal crates
blacklake-core = { path = "../core" }
blacklake-index = { path = "../index" }
blacklake-storage = { path = "../storage" }
blacklake-modelx = { path = "../modelx" }
blacklake-connectors = { path = "../connectors" }
urlencoding = "2.1"


tracing-opentelemetry = "0.21"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
prometheus = "0.13"

# Rate limiting
tower_governor = "0.1"

# Lazy static for metrics
lazy_static = "1.4"
