[package]
name = "blacklake-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blacklake"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Internal crates
blacklake-core = { path = "../core" }
blacklake-storage = { path = "../storage" }
blacklake-modelx = { path = "../modelx" }
urlencoding = "2.1"
