[package]
name = "blacklake-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blacklake"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# CLI UX dependencies
dialoguer = "0.11"
indicatif = "0.17"
mime_guess = "2.0"
similar = "2.4"
colored = "2.1"
serde_yaml = "0.9"
dirs = "5.0"
clap_complete = "4.4"
env_logger = "0.10"
log = "0.4"

# Init command dependencies
walkdir = "2"
blake3 = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
regex = "1"
hostname = "0.3"

# Internal crates
blacklake-core = { path = "../core" }
blacklake-storage = { path = "../storage" }
blacklake-modelx = { path = "../modelx" }
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"
