[package]
name = "blacklake-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sophia = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
urlencoding = "2.1"
hmac = "0.12"
hex = "0.4"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
apalis = { workspace = true }
apalis-redis = { workspace = true }
apalis-core = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-redis-store = { workspace = true }
rand = { workspace = true }
base64 = "0.21"
reqwest = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["metrics", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.13"
opentelemetry-otlp = "0.12"
axum = "0.7"
redis = "0.27"
aws-config = "1.1"
aws-sdk-s3 = "1.14"
tar = "0.4"
flate2 = "1.0"
csv = "1.3"
blacklake-index = { path = "../index" }
blacklake-storage = { path = "../storage" }

[dev-dependencies]
tempfile = "3.0"
