[package]
name = "blacklake-index"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], default-features = false }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
blacklake-core = { path = "../core" }
urlencoding = "2.1"
